--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "gitignore": "^0.6.0",
     "knex": "^0.13.0",
     "morgan": "~1.8.1",
     "pg": "^6.4.0",
