--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "gitignore": "^0.6.0",
+    "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "morgan": "~1.8.1",
     "pg": "^6.4.0",
