--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "development": "nodemon"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
